<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background" />

    <ImageView
        android:id="@+id/image_1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/logo"
        android:contentDescription="logo" />

    <ImageView
        android:id="@+id/aa2e875e_c4"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background" />

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHintText"
        android:inputType="textEmailAddress"
        android:textSize="23sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorHintText"
        android:inputType="textPassword"
        android:textSize="23sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="560dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="625dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tvLoginSignUp"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="295dp"
        android:layout_marginTop="625dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:onClick="signUp"
        android:text="@string/signup"
        android:textColor="@color/blue"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tvRegisterError"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="502dp"
        android:minHeight="48dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="23sp" />


</FrameLayout>