<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/PostDetailsFragment"
    tools:context=".fragments.PostDetailsFragment">


<!--    <ProgressBar-->
<!--        android:id="@+id/pbLogin"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:indeterminateTint="@color/phOrange"-->
<!--        android:indeterminateTintMode="src_atop"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/ivPostDetailsLogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/logo"
        android:contentDescription="logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:backgroundTint="@color/phDarkGray"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="242dp"
        app:cardCornerRadius="8dp"

        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/ivPostDetailsLogo"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/ivPostDetailsImage"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:contentDescription="@string/background_app"
                android:scaleType="centerCrop"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="1"
                app:srcCompat="@drawable/background" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout1"
                app:layout_constraintTop_toBottomOf="@+id/ivPostDetailsImage">

                <!-- Title, secondary and supporting text -->
                <EditText
                    android:id="@+id/tvPostDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:text="Post Title"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeStepGranularity="1sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/tvPostDetailsName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPostDetailsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:background="@null"
                    android:text="Post User"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/tvPostDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:text="Description"
                    android:background="@null"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeStepGranularity="1sp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPostDetailsTitle" />

                <ProgressBar
                    android:id="@+id/pbPostDetails"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/phOrange"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Buttons -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbPostDetailsEdit"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:layout_marginEnd="20dp"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/mbPostDetailsDelete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/mbPostDetailsDelete"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbPostDetailsDelete"
                    style="?attr/borderlessButtonStyle"
                    android:textColor="@color/white"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:backgroundTint="@color/black"

                    app:layout_constraintBaseline_toBaselineOf="@+id/mbPostDetailsEdit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
